--- a/EasyBuy/WebRoot/WEB-INF/web.xml
+++ b/EasyBuy/WebRoot/WEB-INF/web.xml
@@ -8,4 +8,13 @@
   <welcome-file-list>
     <welcome-file>index.jsp</welcome-file>
   </welcome-file-list>
+  
+  <filter>
+  	<filter-name>CharsetFilter</filter-name>
+  	<filter-class>com.ebuy.filter.CharsetFilter</filter-class>
+  </filter>
+  <filter-mapping>
+  	<filter-name>CharsetFilter</filter-name>
+  	<url-pattern>/*</url-pattern>
+  </filter-mapping>
 </web-app>
