--- a/EasyBuy/WebRoot/WEB-INF/web.xml
+++ b/EasyBuy/WebRoot/WEB-INF/web.xml
@@ -8,6 +8,11 @@
   <welcome-file-list>
     <welcome-file>index.jsp</welcome-file>
   </welcome-file-list>
+    <resource-ref>
+  	<res-ref-name>jdbc/easybuy</res-ref-name>
+  	<res-type>javax.sql.DataSource</res-type>
+  	<res-auth>Container</res-auth>
+  </resource-ref>
   
   <filter>
   	<filter-name>CharsetFilter</filter-name>
